--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-Mysql Live
-API_SECRET=fridge9206 #Used when creating a JWT. It can be anything
+API_SECRET=jhd9206
 DB_HOST=127.0.0.1
-DB_DRIVER=mysql 
+DB_DRIVER=mysql
 DB_USER=root
 DB_PASSWORD=1234
 DB_NAME=fridge
-DB_PORT=3306 #Default mysql port
+DB_PORT=3306
